--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <meta name="viewport" content="width=device-width", initial-scale="1.0" />
         <title>Bodies</title>
         <link rel="stylesheet" href="assets/styles.css">
+        <script src=”assets/js/script.js”></script>
+
 
         <link rel="icon" type="image/x-icon" href="assets/imgs/BODIES_of_[ART].jpg">
         <link rel="apple-touch-icon" type="image/x-icon" href="assets/imgs/BODIES_of_[ART].jpg">
@@ -16,41 +18,22 @@
         <nav height=20%>
             <span class="logo">
                 <h1>
-                    <img src="assets/imgs/BODIES_of_[ART].jpg" height=75px width=75px margin=10px alt="[BoA Logo]">
-                    <a href="index.html">Bodies</a>
+                    <a href="index.html"><img src="assets/imgs/BODIES_of_[ART].jpg" height=75px width=75px margin=10px alt="[BoA Logo]">&nbsp;Bodies</a>
                 </h1>
             </span>   
 
             <!-- This is where the Menus to different pages on the head of the site -->
             <menu id="main-menu" class="display-none-mobile display-flex">
                 <li class="dropdown-trigger">
-                    <button>Art</button>
+                    <button>Teams</button>
                     <menu class="dropdown-menu">
-                        <li><a href="sketches.html">Sketches</a></li>
-                        <li><a href="sketches.html">Showcases</a></li>
-                    </menu>
-                </li>
-                <li class="dropdown-trigger">
-                    <button>Music</button>
-                    <menu class="dropdown-menu">
-                        <li><a href="originals.html">Originals</a></li>
-                        <li><a href="jams.html">Jams</a></li>
-                        <li><a href="demos.html">Demos</a></li>
-                    </menu>
-                </li>
-                <li class="dropdown-trigger">
-                    <button>Design</button>
-                    <menu class="dropdown-menu">
-                        <li><a href="websites.html">Websites</a></li>
-                        <li><a href="graphics.html">Graphics</a></li>
-                        <li><a href="clothing.html">Clothing</a></li>
+                        <li><a href="art.html">Art</a></li>
+                        <li><a href="music.html">Music</a></li>
+                        <li><a href="design.html">Design</a></li>
                     </menu>
                 </li>
                 <li>
-                    <a href="">About Us</a>
-                </li>
-                <li>
-                    <a href="">Contact Us</a>
+                    <a href="about.html">About Us</a>
                 </li>
             </menu>
         </nav>
@@ -65,9 +48,11 @@
                 We are Inspiration <br>
                 We are Expression <br>
                 We are Communication <br>
-                We are Bodies of [ART] <br>
+                <p style="color: #eeeeee;">We are Bodies of [ART]</p><br>
             </h2>
         </section>
+
+        
 
     </body>
 </html>
