MOSTLY working pages

--- a/music.html
+++ b/music.html
@@ -42,17 +42,21 @@
         <section>
             <center>
                 <h3><div style="font-family: Invade">This secetion is lacking in specific works, please redirect to the home page here: </div></h3>
-                <button onclick="togglePopup()">Redirect!</button>
+                <button onclick="togglePopup()">
+                    <div style="font-size:32px">Redirect!</style>
+                </button>
 
                 <div class="content"> 
-                    <div onclick="togglePopup()" onclick="redirect()" class="close-btn"> 
+                    <div onclick="togglePopup(), redirect" class="close-btn"> 
                         × 
                     </div> 
                     <h3>
                         Sorry! <br>
+                        You will be redirected in 10 seconds. <br>
                         We're in the works, sorry for the inconvenience :/ <br>
                         - Bodies of [Music]
                     </h3> 
+                    <div setTimeout(function())
                 </div>     
             </center>
             <!-- <a href="index.html"><img src="assets/imgs/BODIES_of_[ART].jpg" height=400px width=400px margin=10px alt="[BoA Logo]"></a> -->
